--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "description": "",
   "dependencies": {
     "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "mongoose": "^8.12.1",
-    "morgan": "^1.10.0",
-    "nodemod": "^3.0.6",
-    "nodemon": "^3.1.9"
+    "express": "^4.18.2",
+    "module2": "file:",
+    "mongoose": "^8.0.0",
+    "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
