--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "express": "^4.18.2",
+    "jest": "^29.7.0",
     "module2": "file:",
     "mongoose": "^8.0.0",
     "morgan": "^1.10.0"
